[gd_scene load_steps=8 format=4 uid="uid://bcjpnf1b3w6ah"]

[ext_resource type="Script" path="res://map.gd" id="1_iphlj"]
[ext_resource type="Texture2D" uid="uid://b5pbcpt2quer8" path="res://maps/tilesets/dune_tileset_base.png" id="2_uqjvp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u5uej"]
texture = ExtResource("2_uqjvp")
texture_region_size = Vector2i(128, 128)
9:6/0 = 0

[sub_resource type="TileSet" id="TileSet_7cl6r"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_u5uej")

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_w7agb"]
friction = 0.3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7lm4"]
size = Vector2(3712, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38qas"]
size = Vector2(128, 2560)

[node name="Map" type="Node2D"]
script = ExtResource("1_iphlj")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD9//3/AAAJAAYAAAD9//7/AAAJAAYAAAD9////AAAJAAYAAAD9/wAAAAAJAAYAAAD9/wEAAAAJAAYAAAD9/wIAAAAJAAYAAAD9/wMAAAAJAAYAAAD9/wQAAAAJAAYAAAD9/wUAAAAJAAYAAAD9/wYAAAAJAAYAAAD9/wcAAAAJAAYAAAD9/wgAAAAJAAYAAAD9/wkAAAAJAAYAAAD9/woAAAAJAAYAAAD9/wsAAAAJAAYAAAD9/wwAAAAJAAYAAAD9/w0AAAAJAAYAAAD9/w4AAAAJAAYAAAD+//3/AAAJAAYAAAD+//7/AAAJAAYAAAD+////AAAJAAYAAAD+/wAAAAAJAAYAAAD+/wEAAAAJAAYAAAD+/wIAAAAJAAYAAAD+/wMAAAAJAAYAAAD+/wQAAAAJAAYAAAD+/wUAAAAJAAYAAAD+/wYAAAAJAAYAAAD+/wcAAAAJAAYAAAD+/wgAAAAJAAYAAAD+/wkAAAAJAAYAAAD+/woAAAAJAAYAAAD+/wsAAAAJAAYAAAD+/wwAAAAJAAYAAAD+/w0AAAAJAAYAAAD+/w4AAAAJAAYAAAD///3/AAAJAAYAAAD///7/AAAJAAYAAAD/////AAAJAAYAAAD//wAAAAAJAAYAAAD//wEAAAAJAAYAAAD//wIAAAAJAAYAAAD//wMAAAAJAAYAAAD//wQAAAAJAAYAAAD//wUAAAAJAAYAAAD//wYAAAAJAAYAAAD//wcAAAAJAAYAAAD//wgAAAAJAAYAAAD//wkAAAAJAAYAAAD//woAAAAJAAYAAAD//wsAAAAJAAYAAAD//wwAAAAJAAYAAAD//w0AAAAJAAYAAAD//w4AAAAJAAYAAAAAAP3/AAAJAAYAAAAAAP7/AAAJAAYAAAAAAP//AAAJAAYAAAAAAAAAAAAJAAYAAAAAAAEAAAAJAAYAAAAAAAIAAAAJAAYAAAAAAAMAAAAJAAYAAAAAAAQAAAAJAAYAAAAAAAUAAAAJAAYAAAAAAAYAAAAJAAYAAAAAAAcAAAAJAAYAAAAAAAgAAAAJAAYAAAAAAAkAAAAJAAYAAAAAAAoAAAAJAAYAAAAAAAsAAAAJAAYAAAAAAAwAAAAJAAYAAAAAAA0AAAAJAAYAAAAAAA4AAAAJAAYAAAABAP3/AAAJAAYAAAABAP7/AAAJAAYAAAABAP//AAAJAAYAAAABAAAAAAAJAAYAAAABAAEAAAAJAAYAAAABAAIAAAAJAAYAAAABAAMAAAAJAAYAAAABAAQAAAAJAAYAAAABAAUAAAAJAAYAAAABAAYAAAAJAAYAAAABAAcAAAAJAAYAAAABAAgAAAAJAAYAAAABAAkAAAAJAAYAAAABAAoAAAAJAAYAAAABAAsAAAAJAAYAAAABAAwAAAAJAAYAAAABAA0AAAAJAAYAAAABAA4AAAAJAAYAAAACAP3/AAAJAAYAAAACAP7/AAAJAAYAAAACAP//AAAJAAYAAAACAAAAAAAJAAYAAAACAAEAAAAJAAYAAAACAAIAAAAJAAYAAAACAAMAAAAJAAYAAAACAAQAAAAJAAYAAAACAAUAAAAJAAYAAAACAAYAAAAJAAYAAAACAAcAAAAJAAYAAAACAAgAAAAJAAYAAAACAAkAAAAJAAYAAAACAAoAAAAJAAYAAAACAAsAAAAJAAYAAAACAAwAAAAJAAYAAAACAA0AAAAJAAYAAAACAA4AAAAJAAYAAAADAP3/AAAJAAYAAAADAP7/AAAJAAYAAAADAP//AAAJAAYAAAADAAAAAAAJAAYAAAADAAEAAAAJAAYAAAADAAIAAAAJAAYAAAADAAMAAAAJAAYAAAADAAQAAAAJAAYAAAADAAUAAAAJAAYAAAADAAYAAAAJAAYAAAADAAcAAAAJAAYAAAADAAgAAAAJAAYAAAADAAkAAAAJAAYAAAADAAoAAAAJAAYAAAADAAsAAAAJAAYAAAADAAwAAAAJAAYAAAADAA0AAAAJAAYAAAADAA4AAAAJAAYAAAAEAP3/AAAJAAYAAAAEAP7/AAAJAAYAAAAEAP//AAAJAAYAAAAEAAAAAAAJAAYAAAAEAAEAAAAJAAYAAAAEAAIAAAAJAAYAAAAEAAMAAAAJAAYAAAAEAAQAAAAJAAYAAAAEAAUAAAAJAAYAAAAEAAYAAAAJAAYAAAAEAAcAAAAJAAYAAAAEAAgAAAAJAAYAAAAEAAkAAAAJAAYAAAAEAAoAAAAJAAYAAAAEAAsAAAAJAAYAAAAEAAwAAAAJAAYAAAAEAA0AAAAJAAYAAAAEAA4AAAAJAAYAAAAFAP3/AAAJAAYAAAAFAP7/AAAJAAYAAAAFAP//AAAJAAYAAAAFAAAAAAAJAAYAAAAFAAEAAAAJAAYAAAAFAAIAAAAJAAYAAAAFAAMAAAAJAAYAAAAFAAQAAAAJAAYAAAAFAAUAAAAJAAYAAAAFAAYAAAAJAAYAAAAFAAcAAAAJAAYAAAAFAAgAAAAJAAYAAAAFAAkAAAAJAAYAAAAFAAoAAAAJAAYAAAAFAAsAAAAJAAYAAAAFAAwAAAAJAAYAAAAFAA0AAAAJAAYAAAAFAA4AAAAJAAYAAAAGAP3/AAAJAAYAAAAGAP7/AAAJAAYAAAAGAP//AAAJAAYAAAAGAAAAAAAJAAYAAAAGAAEAAAAJAAYAAAAGAAIAAAAJAAYAAAAGAAMAAAAJAAYAAAAGAAQAAAAJAAYAAAAGAAUAAAAJAAYAAAAGAAYAAAAJAAYAAAAGAAcAAAAJAAYAAAAGAAgAAAAJAAYAAAAGAAkAAAAJAAYAAAAGAAoAAAAJAAYAAAAGAAsAAAAJAAYAAAAGAAwAAAAJAAYAAAAGAA0AAAAJAAYAAAAGAA4AAAAJAAYAAAAHAP3/AAAJAAYAAAAHAP7/AAAJAAYAAAAHAP//AAAJAAYAAAAHAAAAAAAJAAYAAAAHAAEAAAAJAAYAAAAHAAIAAAAJAAYAAAAHAAMAAAAJAAYAAAAHAAQAAAAJAAYAAAAHAAUAAAAJAAYAAAAHAAYAAAAJAAYAAAAHAAcAAAAJAAYAAAAHAAgAAAAJAAYAAAAHAAkAAAAJAAYAAAAHAAoAAAAJAAYAAAAHAAsAAAAJAAYAAAAHAAwAAAAJAAYAAAAHAA0AAAAJAAYAAAAHAA4AAAAJAAYAAAAIAP3/AAAJAAYAAAAIAP7/AAAJAAYAAAAIAP//AAAJAAYAAAAIAAAAAAAJAAYAAAAIAAEAAAAJAAYAAAAIAAIAAAAJAAYAAAAIAAMAAAAJAAYAAAAIAAQAAAAJAAYAAAAIAAUAAAAJAAYAAAAIAAYAAAAJAAYAAAAIAAcAAAAJAAYAAAAIAAgAAAAJAAYAAAAIAAkAAAAJAAYAAAAIAAoAAAAJAAYAAAAIAAsAAAAJAAYAAAAIAAwAAAAJAAYAAAAIAA0AAAAJAAYAAAAIAA4AAAAJAAYAAAAJAP3/AAAJAAYAAAAJAP7/AAAJAAYAAAAJAP//AAAJAAYAAAAJAAAAAAAJAAYAAAAJAAEAAAAJAAYAAAAJAAIAAAAJAAYAAAAJAAMAAAAJAAYAAAAJAAQAAAAJAAYAAAAJAAUAAAAJAAYAAAAJAAYAAAAJAAYAAAAJAAcAAAAJAAYAAAAJAAgAAAAJAAYAAAAJAAkAAAAJAAYAAAAJAAoAAAAJAAYAAAAJAAsAAAAJAAYAAAAJAAwAAAAJAAYAAAAJAA0AAAAJAAYAAAAJAA4AAAAJAAYAAAAKAP3/AAAJAAYAAAAKAP7/AAAJAAYAAAAKAP//AAAJAAYAAAAKAAAAAAAJAAYAAAAKAAEAAAAJAAYAAAAKAAIAAAAJAAYAAAAKAAMAAAAJAAYAAAAKAAQAAAAJAAYAAAAKAAUAAAAJAAYAAAAKAAYAAAAJAAYAAAAKAAcAAAAJAAYAAAAKAAgAAAAJAAYAAAAKAAkAAAAJAAYAAAAKAAoAAAAJAAYAAAAKAAsAAAAJAAYAAAAKAAwAAAAJAAYAAAAKAA0AAAAJAAYAAAAKAA4AAAAJAAYAAAALAP3/AAAJAAYAAAALAP7/AAAJAAYAAAALAP//AAAJAAYAAAALAAAAAAAJAAYAAAALAAEAAAAJAAYAAAALAAIAAAAJAAYAAAALAAMAAAAJAAYAAAALAAQAAAAJAAYAAAALAAUAAAAJAAYAAAALAAYAAAAJAAYAAAALAAcAAAAJAAYAAAALAAgAAAAJAAYAAAALAAkAAAAJAAYAAAALAAoAAAAJAAYAAAALAAsAAAAJAAYAAAALAAwAAAAJAAYAAAALAA0AAAAJAAYAAAALAA4AAAAJAAYAAAAMAP3/AAAJAAYAAAAMAP7/AAAJAAYAAAAMAP//AAAJAAYAAAAMAAAAAAAJAAYAAAAMAAEAAAAJAAYAAAAMAAIAAAAJAAYAAAAMAAMAAAAJAAYAAAAMAAQAAAAJAAYAAAAMAAUAAAAJAAYAAAAMAAYAAAAJAAYAAAAMAAcAAAAJAAYAAAAMAAgAAAAJAAYAAAAMAAkAAAAJAAYAAAAMAAoAAAAJAAYAAAAMAAsAAAAJAAYAAAAMAAwAAAAJAAYAAAAMAA0AAAAJAAYAAAAMAA4AAAAJAAYAAAANAP3/AAAJAAYAAAANAP7/AAAJAAYAAAANAP//AAAJAAYAAAANAAAAAAAJAAYAAAANAAEAAAAJAAYAAAANAAIAAAAJAAYAAAANAAMAAAAJAAYAAAANAAQAAAAJAAYAAAANAAUAAAAJAAYAAAANAAYAAAAJAAYAAAANAAcAAAAJAAYAAAANAAgAAAAJAAYAAAANAAkAAAAJAAYAAAANAAoAAAAJAAYAAAANAAsAAAAJAAYAAAANAAwAAAAJAAYAAAANAA0AAAAJAAYAAAANAA4AAAAJAAYAAAAOAP3/AAAJAAYAAAAOAP7/AAAJAAYAAAAOAP//AAAJAAYAAAAOAAAAAAAJAAYAAAAOAAEAAAAJAAYAAAAOAAIAAAAJAAYAAAAOAAMAAAAJAAYAAAAOAAQAAAAJAAYAAAAOAAUAAAAJAAYAAAAOAAYAAAAJAAYAAAAOAAcAAAAJAAYAAAAOAAgAAAAJAAYAAAAOAAkAAAAJAAYAAAAOAAoAAAAJAAYAAAAOAAsAAAAJAAYAAAAOAAwAAAAJAAYAAAAOAA0AAAAJAAYAAAAOAA4AAAAJAAYAAAAPAP3/AAAJAAYAAAAPAP7/AAAJAAYAAAAPAP//AAAJAAYAAAAPAAAAAAAJAAYAAAAPAAEAAAAJAAYAAAAPAAIAAAAJAAYAAAAPAAMAAAAJAAYAAAAPAAQAAAAJAAYAAAAPAAUAAAAJAAYAAAAPAAYAAAAJAAYAAAAPAAcAAAAJAAYAAAAPAAgAAAAJAAYAAAAPAAkAAAAJAAYAAAAPAAoAAAAJAAYAAAAPAAsAAAAJAAYAAAAPAAwAAAAJAAYAAAAPAA0AAAAJAAYAAAAPAA4AAAAJAAYAAAAQAP3/AAAJAAYAAAAQAP7/AAAJAAYAAAAQAP//AAAJAAYAAAAQAAAAAAAJAAYAAAAQAAEAAAAJAAYAAAAQAAIAAAAJAAYAAAAQAAMAAAAJAAYAAAAQAAQAAAAJAAYAAAAQAAUAAAAJAAYAAAAQAAYAAAAJAAYAAAAQAAcAAAAJAAYAAAAQAAgAAAAJAAYAAAAQAAkAAAAJAAYAAAAQAAoAAAAJAAYAAAAQAAsAAAAJAAYAAAAQAAwAAAAJAAYAAAAQAA0AAAAJAAYAAAAQAA4AAAAJAAYAAAARAP3/AAAJAAYAAAARAP7/AAAJAAYAAAARAP//AAAJAAYAAAARAAAAAAAJAAYAAAARAAEAAAAJAAYAAAARAAIAAAAJAAYAAAARAAMAAAAJAAYAAAARAAQAAAAJAAYAAAARAAUAAAAJAAYAAAARAAYAAAAJAAYAAAARAAcAAAAJAAYAAAARAAgAAAAJAAYAAAARAAkAAAAJAAYAAAARAAoAAAAJAAYAAAARAAsAAAAJAAYAAAARAAwAAAAJAAYAAAARAA0AAAAJAAYAAAARAA4AAAAJAAYAAAASAP3/AAAJAAYAAAASAP7/AAAJAAYAAAASAP//AAAJAAYAAAASAAAAAAAJAAYAAAASAAEAAAAJAAYAAAASAAIAAAAJAAYAAAASAAMAAAAJAAYAAAASAAQAAAAJAAYAAAASAAUAAAAJAAYAAAASAAYAAAAJAAYAAAASAAcAAAAJAAYAAAASAAgAAAAJAAYAAAASAAkAAAAJAAYAAAASAAoAAAAJAAYAAAASAAsAAAAJAAYAAAASAAwAAAAJAAYAAAASAA0AAAAJAAYAAAASAA4AAAAJAAYAAAATAP3/AAAJAAYAAAATAP7/AAAJAAYAAAATAP//AAAJAAYAAAATAAAAAAAJAAYAAAATAAEAAAAJAAYAAAATAAIAAAAJAAYAAAATAAMAAAAJAAYAAAATAAQAAAAJAAYAAAATAAUAAAAJAAYAAAATAAYAAAAJAAYAAAATAAcAAAAJAAYAAAATAAgAAAAJAAYAAAATAAkAAAAJAAYAAAATAAoAAAAJAAYAAAATAAsAAAAJAAYAAAATAAwAAAAJAAYAAAATAA0AAAAJAAYAAAATAA4AAAAJAAYAAAAUAP3/AAAJAAYAAAAUAP7/AAAJAAYAAAAUAP//AAAJAAYAAAAUAAAAAAAJAAYAAAAUAAEAAAAJAAYAAAAUAAIAAAAJAAYAAAAUAAMAAAAJAAYAAAAUAAQAAAAJAAYAAAAUAAUAAAAJAAYAAAAUAAYAAAAJAAYAAAAUAAcAAAAJAAYAAAAUAAgAAAAJAAYAAAAUAAkAAAAJAAYAAAAUAAoAAAAJAAYAAAAUAAsAAAAJAAYAAAAUAAwAAAAJAAYAAAAUAA0AAAAJAAYAAAAUAA4AAAAJAAYAAAAVAP3/AAAJAAYAAAAVAP7/AAAJAAYAAAAVAP//AAAJAAYAAAAVAAAAAAAJAAYAAAAVAAEAAAAJAAYAAAAVAAIAAAAJAAYAAAAVAAMAAAAJAAYAAAAVAAQAAAAJAAYAAAAVAAUAAAAJAAYAAAAVAAYAAAAJAAYAAAAVAAcAAAAJAAYAAAAVAAgAAAAJAAYAAAAVAAkAAAAJAAYAAAAVAAoAAAAJAAYAAAAVAAsAAAAJAAYAAAAVAAwAAAAJAAYAAAAVAA0AAAAJAAYAAAAVAA4AAAAJAAYAAAAWAP3/AAAJAAYAAAAWAP7/AAAJAAYAAAAWAP//AAAJAAYAAAAWAAAAAAAJAAYAAAAWAAEAAAAJAAYAAAAWAAIAAAAJAAYAAAAWAAMAAAAJAAYAAAAWAAQAAAAJAAYAAAAWAAUAAAAJAAYAAAAWAAYAAAAJAAYAAAAWAAcAAAAJAAYAAAAWAAgAAAAJAAYAAAAWAAkAAAAJAAYAAAAWAAoAAAAJAAYAAAAWAAsAAAAJAAYAAAAWAAwAAAAJAAYAAAAWAA0AAAAJAAYAAAAWAA4AAAAJAAYAAAAXAP3/AAAJAAYAAAAXAP7/AAAJAAYAAAAXAP//AAAJAAYAAAAXAAAAAAAJAAYAAAAXAAEAAAAJAAYAAAAXAAIAAAAJAAYAAAAXAAMAAAAJAAYAAAAXAAQAAAAJAAYAAAAXAAUAAAAJAAYAAAAXAAYAAAAJAAYAAAAXAAcAAAAJAAYAAAAXAAgAAAAJAAYAAAAXAAkAAAAJAAYAAAAXAAoAAAAJAAYAAAAXAAsAAAAJAAYAAAAXAAwAAAAJAAYAAAAXAA0AAAAJAAYAAAAXAA4AAAAJAAYAAAAYAP3/AAAJAAYAAAAYAP7/AAAJAAYAAAAYAP//AAAJAAYAAAAYAAAAAAAJAAYAAAAYAAEAAAAJAAYAAAAYAAIAAAAJAAYAAAAYAAMAAAAJAAYAAAAYAAQAAAAJAAYAAAAYAAUAAAAJAAYAAAAYAAYAAAAJAAYAAAAYAAcAAAAJAAYAAAAYAAgAAAAJAAYAAAAYAAkAAAAJAAYAAAAYAAoAAAAJAAYAAAAYAAsAAAAJAAYAAAAYAAwAAAAJAAYAAAAYAA0AAAAJAAYAAAAYAA4AAAAJAAYAAAAZAP3/AAAJAAYAAAAZAP7/AAAJAAYAAAAZAP//AAAJAAYAAAAZAAAAAAAJAAYAAAAZAAEAAAAJAAYAAAAZAAIAAAAJAAYAAAAZAAMAAAAJAAYAAAAZAAQAAAAJAAYAAAAZAAUAAAAJAAYAAAAZAAYAAAAJAAYAAAAZAAcAAAAJAAYAAAAZAAgAAAAJAAYAAAAZAAkAAAAJAAYAAAAZAAoAAAAJAAYAAAAZAAsAAAAJAAYAAAAZAAwAAAAJAAYAAAAZAA0AAAAJAAYAAAAZAA4AAAAJAAYAAAA=")
tile_set = SubResource("TileSet_7cl6r")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 626.0
offset_top = 335.0
offset_right = -626.0
offset_bottom = -335.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 19
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Control/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Game name"
horizontal_alignment = 1

[node name="JoinButton" type="Button" parent="CanvasLayer/Control/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Join game"

[node name="HostButton" type="Button" parent="CanvasLayer/Control/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Host game"

[node name="AdressEntry" type="LineEdit" parent="CanvasLayer/Control/MainMenu/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address"
alignment = 1

[node name="PortEntry" type="LineEdit" parent="CanvasLayer/Control/MainMenu/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Port"
alignment = 1

[node name="Spacer" type="Control" parent="CanvasLayer/Control/MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UsernameEntry" type="LineEdit" parent="CanvasLayer/Control/MainMenu/VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"
alignment = 1

[node name="ColorPicker" type="ColorPickerButton" parent="CanvasLayer/Control/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Player Color"
edit_alpha = false

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_w7agb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1472, -448)
shape = SubResource("RectangleShape2D_w7lm4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1472, 1984)
shape = SubResource("RectangleShape2D_w7lm4")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(3392, 768)
shape = SubResource("RectangleShape2D_38qas")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-448, 768)
shape = SubResource("RectangleShape2D_38qas")

[connection signal="pressed" from="CanvasLayer/Control/MainMenu/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MainMenu/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
